# cycl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
cycl/: cycl.py  models.py  remote.py  utils.py
tests/test_local/: cycl.yaml
